<resources>
    <string name="app_name">召喚機器狼</string>
    <string name="license">License</string>
    <string name="input_plurk_username">請輸入噗浪帳號</string>
    <string name="confirm">確認</string>
    <string name="retry">重試</string>
    <string name="monster_loading">正在載入寵物資料</string>
    <string name="menu_profile">蒐集完成度</string>
    <string name="command_prefix">https://www.plurk.com/m?content=</string>
    <string name="command_append">&amp;qualifier=plays</string>
    <string name="bot_draw">機器狼 轉蛋</string>
    <string name="bot_draw_d">轉蛋</string>
    <string name="bot_draw_normal">一般轉蛋</string>
    <string name="bot_draw_ultra">超轉蛋</string>
    <string name="command_draw">機器狼 轉蛋</string>
    <string name="command_draw_ultra">機器狼 超轉蛋</string>
    <string name="bot_exp">經驗值轉蛋</string>
    <string name="bot_exp_normal">經驗值轉蛋</string>
    <string name="bot_exp_ultra">經驗值超轉蛋</string>
    <string name="command_exp">機器狼 經驗值轉蛋 %s </string>
    <string name="command_exp_ultra">機器狼 經驗值超轉蛋 %s </string>
    <string name="bot_battle">遊玩地城</string>
    <string name="bot_battle_normal">一般地城</string>
    <string name="bot_battle_hell">地獄級地城</string>
    <string name="bot_battle_ultra_hell">超地獄級地城</string>
    <string name="command_battle">機器狼 %s</string>
    <string name="bot_hell_battle">遊玩地獄級地城</string>
    <string name="command_hell_battle">機器狼 地獄級 %s</string>
    <string name="command_ultra_hell_battle">機器狼 超地獄級 %s</string>
    <string name="bz"> (bz)(bz)(bz)(bz)(bz)(bz)</string>
    <string name="submit_success">已成功送出</string>
    <string name="open">開啟</string>
    <string name="loading">讀取中</string>
    <string name="no_selection">未選擇對象</string>
    <string name="no_select">未選擇</string>
    <string name="no_data">無資料</string>
    <string name="completion">蒐集完成度</string>
    <string name="monster_type">原TYPE</string>
    <string name="battle_type">下場TYPE</string>
    <string name="monster_level">等級</string>
    <string name="monster_class">階級</string>
    <string name="monster_skill">技能</string>
    <string name="monster_series">系列</string>
    <string name="close">關閉</string>
    <string name="team">隊伍</string>
    <string name="monster_front">前鋒寵物</string>
    <string name="monster_support">後衛寵物</string>
    <string name="monster_box">機器狼BOX</string>
    <string name="monster_image">monster image</string>
    <string name="chips">星圖晶片</string>
    <string name="no_available_app">沒有可處理的程式</string>
    <string name="bot_link">機器狼的噗浪</string>
    <string name="author_link">作者的噗浪</string>
    <string name="logout">登入其他帳號</string>
    <string name="sort">排序</string>
    <string name="sort_series">系列</string>
    <string name="sort_name">名稱</string>
    <string name="sort_rare">稀有度</string>
    <string name="sort_level">等級</string>
    <string name="sort_class">階級</string>
    <string name="sort_type">TYPE</string>
    <string name="data_loaded">已載入寵物資料</string>
    <string name="load_data_failed">無法載入寵物資料</string>
    <string name="load_data_failed_message">載入資料失敗，你可能還沒有寵物或無法連上網路。\n你可以重試或進行一次轉蛋。</string>
    <string name="team_member_select">選擇出戰隊伍</string>
    <string name="welcome">您好 @</string>
</resources>
